--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -11,7 +11,7 @@ jobs:
 
     defaults:
       run:
-        working-directory: ./back
+        working-directory: PROJEKAT/back
 
     steps:
       - name: Checkout code
